--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-    <div class="score_container">
+    <div class="score_container" style="display: none">
       <span>Score: 0</span>
     </div>
     <canvas id="game_container"></canvas>
-    <div class="game_over_con">
+    <div class="game_over_con" style="display: none">
       <h1>Game Over</h1>
       <span id="score">Score: 0</span>
       <p>Press 'r' to play again</p>
