--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script>
-      window.location = "/dist/index.html";
+      window.location += "/dist/index.html";
     </script>
   </body>
 </html>
