fix score con style

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <div class="score_container" style="display: none">
-      <span>Score: 0</span>
+    <div class="score_container">
+      <span style="display: none">Score: 0</span>
     </div>
     <canvas id="game_container"></canvas>
     <div class="game_over_con" style="display: none">
